BETA 2.0.0.7 OMFLogger2 warn/err generic exception initFeatureRegisterer added in APlugin to avoid confusion with getFeatureRegisterer
add temporary catch deprecated OMFRollBackException to ensure retro-compatibility

add error management for 2022x

addJdoc for Options

add OMFBarrierExecutor class to centralize runnable execution inside OMF Barrier

add OMFUtils.isProjectOpened

Update Rules to get rid of warning adding the Generics definitions
Update ARule to integrate matches within the OMFBarrier

Update AUIAction to checkAvailability within the OMFBarrier

Fix CloneManager where filters where not applied (cloneType()) + it now filter elements when you add them to copy

TODO pb on Error Handling with RollbackException